# RegEx

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
RegExCmd/: CMakeLists.txt  main.cpp
inc/: Convenience.h  Expression.h  ExpressionBuildFunctions.h  ExpressionBuilder.h  NfaBuilder.h  NfaComplete.h  NfaFragment.h  NfaFragmentSearch.h  NfaState.h  Operator.h  OperatorType.h  ParseResult.h  SearchResult.h  calculateHitMask.h  createNfaFragment.h  find.h  parse.h  prepareTextPartitionByNumberOfHits.h  search.h
inc/nfa/: Complete.h  Fragment.h  FragmentBuilder.h  FragmentSearch.h  MainBuilder.h  State.h  StateBuilder.h
inc/op/: AllOperatorIncludes.h  Alternation.h  Concatenation.h  GroupingEnd.h  GroupingStart.h  Literal.h  Match.h  OneOrMore.h  Operator.h  OperatorVisitor.h  Types.h  Utils.h  Wildcard.h  ZeroOrMore.h  ZeroOrOne.h
libRegEx/: CMakeLists.txt  Expression.cpp  ExpressionBuildFunctions.cpp  ExpressionBuilder.cpp  NfaBuilder.cpp  NfaComplete.cpp  NfaFragment.cpp  NfaFragmentSearch.cpp  NfaState.cpp  Operator.cpp  OperatorType.cpp  ParseResult.cpp  Result.cpp  calculateHitMask.cpp  createNfaFragment.cpp  find.cpp  parse.cpp  prepareTextPartitionByNumberOfHits.cpp  search.cpp
libRegEx/nfa/: Complete.cpp  Fragment.cpp  FragmentBuilder.cpp  FragmentSearch.cpp  MainBuilder.cpp  State.cpp  StateBuilder.cpp
libRegEx/op/: Operator.cpp  Utils.cpp
res/: textregex.txt
test/: CMakeLists.txt  testExpressionBuildFunctions.cpp  testParse.cpp
test/inc/: NfaBuilderForTest.h  storageUtils.h
test/inc/nfa/: MainBuilderForTest.h
test/src/: NfaBuilderForTest.cpp  storageUtils.cpp  testCalculateHitMask.cpp  testExpression.cpp  testExpressionBuildFunctions.cpp  testFind.cpp  testFragmentSearch.cpp  testNfaBuilder.cpp  testOperator.cpp  testParse.cpp  testParseResult.cpp  testPartitionText.cpp
test/src/nfa/: MainBuilderForTest.cpp  testMainBuilder.cpp
test/src/op/: testOperator.cpp
